Continuity/Small Fixes/HWReformat

--- a/Frame/Layout/3_Content/BTech/softwaremob.html
+++ b/Frame/Layout/3_Content/BTech/softwaremob.html
@@ -5,11 +5,11 @@
         <div class="panel panel-default SWREAD">
             <div class="panel-heading">
                 <h3 class="panel-title tc">
-                <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#termreason">SoftWare Synopsis - More</a>
-            </h3></div></div>
-        <section aria-label="TechSyp" id="termreason" class="panel-collapse collapse">
+                    <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#termreason">SoftWare Synopsis - More</a></h3></div></div>
+
+        <section aria-label="TechSSyp" id="termreason" class="panel-collapse collapse">
             <div class="panel-body">
-                <section aria-label="TechSypDetail" class="comment-content">
+                <section aria-label="TechSypDetailS" class="comment-content">
                     <h6>Terminology/Reason</h6>
                     <h5>2 Min. Read</h5>
                     <hgroup class="bible-content tc">
@@ -249,7 +249,7 @@
                                     </div></div></div>
                         </section>
                         <!--Conclusion Menu-->
-                        <section aria-label="" id="conclusion">
+                        <section aria-label="SoftConc" id="conclusion">
                             <div class="panel panel-default">
                                 <div class="panel-heading">
                                     <h3 class="panel-title tc">
@@ -264,6 +264,7 @@
                                         <p>No matter your interest or field, the proper tools are essential. Whether beginner or pro, we are all always learning, always growing, always innovating, and always creating.</p></div></div></div></section>
                 </section></section>
         </div></section>
+        <div class="clearfix"></div>
     <!--Terms Alert-->
         <section aria-label="SoftAlert" id="softwarealert">
             <div class="alert alert-warning alert-dismissible tc" role="alert">
@@ -442,7 +443,7 @@
         <div class="clearfix"></div>
         <div class="panel panel-default">
         <!--WebToolbox Intro-->
-            <section aria-label="Beginhere" class="comment-content">
+            <section aria-label="Leavehere" class="comment-content">
                 <p class="tc">Before leaving the Web recommendations. We have web dependencies such as Communication, Social Medias, Databases, Warehouses, Tools, and Clients.</p></section></div>
         <section class="dltab col-xl-12 col-lg-12 col-md-12 col-sm-12">
             <table class="data no-wrap">
@@ -559,7 +560,6 @@
             <p>These easy internet resources are excellent for last-minute planning, especially for those on a tight budget because they are completely free. There are a ton of different resources available online, but these optimizers will take you down that specific rabbit hole.</p>
         </section><br>
         <div class="clearfix"></div>
-
     <!--Domains-->
         <div id="domainjump"></div>
         <p class="tc">Website/Blogs results vary by content.</p>
@@ -882,7 +882,7 @@
                         <p>This little gem is one I am not even sure how I came about it but I sure am glad I did. This little portable software is tiny and powerful. Best I have ever encountered. Simply makes creating icons drag and drop straight on the desktop. Purely phenomenal.</p> 
                     <hgroup>
                         <h4>CPU-Z</h4></hgroup>
-                        <p>Needs no introduction. Meanwhile I decided what better leader to put all the dependable backup software's into. So a quick and brief rundown of those is in order.</p>
+                        <p>Needs no introduction although personally I use Speccy. Meanwhile I decided what better leader in name to put all the dependable backup software's into. So a quick and brief rundown of those is in order.</p>
                     <hgroup>
                         <h5>Win-Rar</h5></hgroup>
                         <p>Love it or hate it - I love it. When it comes to archiving and storing there is no competition. Is a must have in my book.</p>
