--- a/Frame/CSS/MainPage.css
+++ b/Frame/CSS/MainPage.css
@@ -498,7 +498,10 @@ span {
             padding-left: 40px;
             background-color: #f5f5f5;
             border-color: #fff;
-            border-radius: 8px;
+            border-top-left-radius: 0;
+            border-top-right-radius: 0;
+            border-bottom-right-radius: 8px;
+            border-bottom-left-radius: 0;
         }
         .comment-right-content {
             padding-right: 40px;
