Css Reduction Clean

--- a/Frame/Layout/2_Intro/musicintro.html
+++ b/Frame/Layout/2_Intro/musicintro.html
@@ -1,5 +1,5 @@
 <div class="panel-body">
     <section class="intro">
         <h2 id="musici" class="section-heading">Audio Library</h2>
-        <span class="icon9add icon9-music" style="font-size: 60px"></span>
+        <span class="icon9add icon9-music" style="font-size: 60px">&nbsp;</span>
         <p class="text-light">Rekindle the Saxon Hate with Frequency.</p></section></div>
