--- a/Frame/Layout/2_Intro/videointro.html
+++ b/Frame/Layout/2_Intro/videointro.html
@@ -1,5 +1,5 @@
 <div class="panel-body">
     <section class="intro">
         <h2 id="movieI" class="section-heading">Video Library</h2>
-        <span class="icon9add icon9-tv" style="font-size: 60px"></span>
+        <span class="icon9add icon9-tv" style="font-size: 60px">&nbsp;</span>
         <p class="text-light">Documentaries about reality</p></section></div>
