--- a/Frame/Layout/3_Content/BTech/softwaremob.html
+++ b/Frame/Layout/3_Content/BTech/softwaremob.html
@@ -6,7 +6,7 @@
             <div class="panel-heading">
                 <h3 class="panel-title tc">
                     <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#termreason">SoftWare Synopsis - More</a></h3></div></div>
-
+       
         <section aria-label="TechSSyp" id="termreason" class="panel-collapse collapse">
             <div class="panel-body">
                 <section aria-label="TechSypDetailS" class="comment-content">
@@ -14,8 +14,8 @@
                     <h5>2 Min. Read</h5>
                     <hgroup class="bible-content tc">
                         <h5>Open Source</h5></hgroup>
-                    <p>Open Source is generally free and the code is public; meaning you will usually have full access to the program's code. This has many advantages and many flaws if you are not a developer or understand the language the program is written in to tweak, fix bugs, or create new features &amp; updates.</p>
-                    <p>Although, the pro is even if you cant develop it further than the original - then it is just another program that is free and usable at your discretion 99% of the time.</p>
+                    <p>Open Source is generally free and the code is public; meaning you will usually have full access to the program's code. This has many advantages and many flaws if you are not a developer or understand the language the program is written in to tweak, fix bugs, or create new features &amp; updates.<br><br>
+                    Although, the pro is even if you cant develop it further than the original - then it is just another program that is free and usable at your discretion 99% of the time.</p>
                     <hgroup class="bible-content tc">
                         <h5>Licensing:</h5>
                         <h5>Proprietary</h5></hgroup>
@@ -277,8 +277,8 @@
             <table class="data no-wrap">
                 <thead>
                     <tr>
-                        <th><strong>Program</strong></th>
-                        <th><strong>Source Code</strong></th></tr></thead>
+                        <th style="width: 250px;"><strong>Program</strong></th>
+                        <th style="width: 250px;"><strong>Source Code</strong></th></tr></thead>
                 <tbody>
                 <tr>
                     <td onclick="window.open('https://www.Brave.com','popup','width=600,height=600'); return false;">Brave</td>
@@ -344,8 +344,10 @@
                         <p>There is not too much to add here as it is just an Email and a VPN. I have come to discover that many people do not have a VPN or use a VPN (for what ever reason). I can only strongly suggest that they should.</p>
                         <p>As for what a VPN is and isn't? I will not cover that here - being a completely different topic. If you value privacy you should not be using Gmail, Yahoo, Hotmail, etc. Google employees and their affiliates, advertisers, sister corporations, friends, partners, agents, NSA, government, banks, anyone really - combs through your emails.</p>
                         <p>ProtonMail's encryption is End-to-End. This means the only people who can see your email messages are the sender and yourself. So why are you not using ProtonMail?</p>
+                        <p>Well, there are a few caveats such as ProtonMail it is not really fair to say is a Free Email. As long as one understands once they invest in ProtonMail, they will be putting anything an email is used for behind a paywall. This may not be the best idea for all scenarios.</p>
                         <p>The VPN feature is free, so if you were not using one (for whatever reason) you are now!</p>
-                        <p>Proton's services are unmatched! They honestly have zero competition at this stage in the game. In combination with Brave Browser, you can actually feel the protection like a blanket. The price range is from $0 (yes, actually free including the VPN) to Paid plans starting at $5 for Basic and $12 for Unlimited - both are super reasonably priced. Both provide a better user experience granting access to more servers meaning faster loading/download/upload. I would also like to mention that these packages come with ProtonBridge; which we will get into momentarily.</p>
+                        <p>Proton's services are unmatched in the Email world! They honestly have zero competition at this stage in the game. In combination with Brave Browser, you can actually feel the protection like a blanket. The price range is from $0 (yes, actually free including the VPN) to Paid Plans starting at $5 for Basic and $12 for Unlimited - both are super reasonably priced, keep in mind for whatever reason you may encounter hardship or unable to make that payment - you will not want to lock Crucial Authentications, Certificates, Verifications, and Financials, to Protons Services from Drive/Pass to mail - if you decide too just keep in mind you will become solely dependent on making that payment, or you risk losing everything in Suspension/Deletion.</p> 
+                        <p>Both provide a better user experience granting access to more servers meaning faster loading/download/upload. I would also like to mention that these packages come with ProtonBridge(Paid feature); which we will get into momentarily.</p>
 
                         <p>It is also important to mention that Brave also offers a VPN; which is built into Brave. Meanwhile, the cost is identical to ProtonVPN. Proton has far more value when bundled with Mail/Bridge. So this is one Brave feature Proton is just better and outbeats Brave.</p>
                         <p>A subscription worth the investment as Proton works on your Mobile too.</p></section></div></section>
@@ -370,7 +372,7 @@
                 <!--Proton Extra Details-->
                     <section aria-label="TechProtonsExtra" id="PROTONEXTRA" class="panel-collapse collapse">
                         <div class="panel-body">
-                            <p>Bridge will allow you to bring ProtonMail to the desktop using a client of your choice. I happen to promote ThunderBird as a client for several reasons: Thunderbird is open source, highly customizable, and all other reasons falls into the category that I have used it forever because it is reliable.</p>
+                            <p>Bridge will allow you to bring ProtonMail to the desktop using a client of your choice, this is a PayWall feature. I happen to promote ThunderBird as a client for several reasons: Thunderbird is open source, highly customizable, and all other reasons falls into the category that I have used it forever because it is reliable.</p>
                             <p>Drive is a Cloud storage that allows you to have Cloud access, <wbr>
                             Pass is a solid Password Manager, and<wbr> the Calendar... Well, it is a calendar.</p>
                             <hgroup class="bible-content">
@@ -453,8 +455,8 @@
         <table class="data no-wrap">
             <thead>
                 <tr>
-                    <th><strong>Program</strong></th>
-                    <th><strong>Source Code</strong></th></tr></thead>
+                    <th style="width: 250px;"><strong>Program</strong></th>
+                    <th style="width: 250px;"><strong>Source Code</strong></th></tr></thead>
             <tbody>
                 <tr>
                     <td onclick="window.open('https://oxen.io/','popup','width=600,height=600'); return false;">Sessions/Oxen</td>
@@ -471,8 +473,8 @@
         <table class="data no-wrap">
             <thead>
                 <tr>
-                    <th><strong>Program</strong></th>
-                    <th><strong>Source Code</strong></th></tr></thead>
+                    <th style="width: 250px;"><strong>Program</strong></th>
+                    <th style="width: 250px;"><strong>Source Code</strong></th></tr></thead>
             <tbody>
                 <tr>
                     <td onclick="window.open('https://www.minds.com/?referrer=greyingerror9','popup','width=600,height=600'); return false;">Minds Social</td>
@@ -522,8 +524,8 @@
             <table class="data no-wrap">
                 <thead>
                     <tr>
-                        <th><strong>Program</strong></th>
-                        <th><strong>Source Code</strong></th></tr></thead>
+                        <th style="width: 250px;"><strong>Program</strong></th>
+                        <th style="width: 250px;"><strong>Source Code</strong></th></tr></thead>
                 <tbody>
                     <tr>
                         <td onclick="window.open('https://nodejs.org/en','popup','width=600,height=600'); return false;">NodeJS</td>
@@ -778,8 +780,8 @@
             <table class="data no-wrap">
                 <thead>
                     <tr>
-                        <th><strong>Program</strong></th>
-                        <th><strong>Source Code</strong></th></tr></thead>
+                        <th style="width: 250px;"><strong>Program</strong></th>
+                        <th style="width: 250px;"><strong>Source Code</strong></th></tr></thead>
                 <tbody>
                     <tr>
                         <td onclick="window.open('https://www.revouninstaller.com/revo-uninstaller-free-download/','popup','width=600,height=600'); return false;">RevoUninstaller</td>
@@ -923,8 +925,8 @@
             <table class="data no-wrap">
                 <thead>
                     <tr>
-                        <th><strong>Program</strong></th>
-                        <th><strong>Source Code</strong></th></tr></thead>
+                        <th style="width: 250px;"><strong>Program</strong></th>
+                        <th style="width: 250px;"><strong>Source Code</strong></th></tr></thead>
                 <tbody>
                     <tr>
                         <td onclick="window.open('https://strlen.com/treesheets/','popup','width=600,height=600'); return false;">TreeSheets</td>
@@ -948,8 +950,8 @@
             <table class="data no-wrap">
                 <thead>
                     <tr>
-                        <th><strong>Program</strong></th>
-                        <th><strong>Source Code</strong></th></tr></thead>
+                        <th style="width: 250px;"><strong>Program</strong></th>
+                        <th style="width: 250px;"><strong>Source Code</strong></th></tr></thead>
                 <tbody>
                     <tr>
                         <td onclick="window.open('https://www.win-rar.com/start.html?&amp;L=0','popup','width=600,height=600'); return false;">WinRar</td>
@@ -1015,8 +1017,8 @@
             <table class="data no-wrap">
                 <thead>
                     <tr>
-                        <th><strong>Program</strong></th>
-                        <th><strong>Source Code</strong></th></tr></thead>
+                        <th style="width: 250px;"><strong>Program</strong></th>
+                        <th style="width: 250px;"><strong>Source Code</strong></th></tr></thead>
                 <tbody>
                     <tr>
                         <td onclick="window.open('https://www.sublimetext.com/','popup','width=600,height=600'); return false;">SubLimeText</td>
@@ -1069,8 +1071,8 @@
             <table class="data no-wrap">
                 <thead>
                     <tr>
-                        <th><strong>Program</strong></th>
-                        <th><strong>Source Code</strong></th></tr></thead>
+                        <th style="width: 250px;"><strong>Program</strong></th>
+                        <th style="width: 250px;"><strong>Source Code</strong></th></tr></thead>
                 <tbody>
                     <tr>
                         <td onclick="window.open('https://download.cnet.com/developer/Romeolight/i-10372395/','popup','width=600,height=600'); return false;">RomeoLight</td>
@@ -1119,8 +1121,8 @@
                 <table class="data no-wrap">
                     <thead>
                         <tr>
-                            <th><strong>Program</strong></th>
-                            <th><strong>Source Code</strong></th></tr></thead>
+                            <th style="width: 250px;"><strong>Program</strong></th>
+                            <th style="width: 250px;"><strong>Source Code</strong></th></tr></thead>
                     <tbody>
                         <tr>
                             <td onclick="window.open('https://www.avid.com/pro-tools','popup','width=600,height=600'); return false;">Protools</td>
