--- a/Frame/Layout/6_ReadMore/BTech/crypinfowrap.html
+++ b/Frame/Layout/6_ReadMore/BTech/crypinfowrap.html
@@ -1,13 +1,17 @@
 <!--Page Contain -->
-                <div class="panel-body">
-                <section class="content Info-Sec">
-                    <div class="panel-footy panel-default tc">
-                        <hgroup class="section-header">
-                            <h2 class="icon9add icon9-info-sign text-primary" style="font-size: 40px"></h2>
-                            <h4>Resources</h4></hgroup> 
-                        <p class="text-muted">Be wealthy and not consumed.<br> Be vigilant and not a fool.</p>  
-                    </div></section></div>
-
-                <div class="panel_row">
-                    <div class="blog-content col-MainX col-lg-MainL col-MainM col-sm-MainS">
-                    <p class="section-heading text-muted">"All Wars are <u>Economical</u>".</p></div></div>
+    <div class="panel-body">
+        <section class="content">
+            <div class="panel-footy panel-default tc">
+<!--Header -->     
+                <hgroup>
+                    <h2 class="icon9add icon9-info-sign text-primary" style="font-size: 40px"></h2>
+                    <h4>Resources</h4></hgroup> 
+                <p class="text-muted">Be wealthy and not consumed.<br> Be vigilant and not a fool.</p>  
+<!--Button -->
+            </div></section>
+<!--Quote -->
+        <div class="panel_row">
+            <div class="blog-content col-MainX col-lg-MainL col-MainM col-sm-MainS">
+            <p class="text-muted">"All Wars are <u>Economical</u>".</p></div></div>
+<!--InfoWrap Close -->
+    </div> 
