--- a/Frame/Layout/6_ReadMore/arcadeinfowrap.html
+++ b/Frame/Layout/6_ReadMore/arcadeinfowrap.html
@@ -1,35 +1,36 @@
-<!--Page Contain -->
+<!--InfoWrap Open -->
     <div class="panel-body">
-    <section class="content Info-Sec">
-        <div class="panel-footy panel-default tc">
+        <section class="content" aria-label="arcadwrap">
+            <div class="panel-footy panel-default tc">
 <!--Header -->
-            <hgroup class="section-header">
-                <h2 class="icon9add icon9-info-sign text-primary" style="font-size: 40px"></h2>
-                <h4>The Arcade</h4></hgroup> 
-            <p class="text-muted">This list is presented as an archive of predecessors.<br> These will not play on mobile devices, MUST HAVE PC!</p>
+                <hgroup>
+                    <h2 class="icon9add icon9-info-sign text-primary" style="font-size:40px"></h2>
+                    <h4>The Arcade</h4></hgroup> 
+                <p class="text-muted">This list is presented as an archive of predecessors.<br> These will not play on mobile devices, MUST HAVE PC!</p>
 <!--Button -->
-            <section aria-label="Gamewrapp">
-                <div class="btn-1 center-block">
-                    <h3 class="panel-title tc">
-                    <a style="center" class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#arcadeRM"><span>Read - More</span></a></h3></div></section></div>
+                <section class="panel-body" aria-label="Gamewrapp">
+                    <div class="btn-1 center-block">
+                        <h3 class="panel-title tc">
+                        <a style="center" class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#arcadeRM"><span>Read - More</span></a></h3></div></section></div>
 <!--Arcade ReadMore -->       
-        <div id="arcadeRM" class="comment-content panel-collapse collapse">
-            <!--Contain -->
-            <div class="content panel-body">
-                <div class="content-inner">
+            <div id="arcadeRM" class="comment-content panel-collapse collapse">
+                <!--Contain -->
+                <div class="content panel-body">
+                    <div class="content-inner">
 <!--Main -->   
-                <section aria-label="GameCulture" class="comment-content">
-                    <hgroup class="bible-content tc">
-                        <h5>Arcade Play</h5></hgroup>
-                            <p>As of now there is no spare time to work on makeing these classic playable online and on Mobile devices, our Main Development takes precedent but these classics will in fact be playable through our Main Development(Optional add on package). Just not stand alone.<br><br>
-                            These legacy games were a massive inspiration of the endless possibilties for NineNeins and are truly gems we did not want lost and buried in the interwebs.</p></section>
-                <section aria-label="GameInspiration" class="comment-content">
-                    <hgroup class="bible-content tc">
-                        <h5>Favorite Play</h5></hgroup>
-                            <p>Classic Favorite Games with Emulators to play them if desired. Like alot of things on NineNeins is a front end storage for my Computers. Makeing it a super interactive Blog/Site/App or whatever word you want to use for it.</p></section>
-                    </div></div></div>
-                </section></div>
-
-                <div class="panel_row">
-                    <div class="blog-content col-MainX col-lg-MainL col-MainM col-sm-MainS">
-                    <p class="section-heading text-muted">"A game is creative - someone created it.<br><u>There is no better developer than God</u>"</p></div></div>
+                    <section aria-label="GameCulture" class="comment-content">
+                        <hgroup class="bible-content tc">
+                            <h5>Arcade Play</h5></hgroup>
+                                <p>As of now there is no spare time to work on makeing these classic playable online and on Mobile devices, our Main Development takes precedent but these classics will in fact be playable through our Main Development(Optional add on package). Just not stand alone.<br><br>
+                                These legacy games were a massive inspiration of the endless possibilties for NineNeins and are truly gems we did not want lost and buried in the interwebs.</p></section>
+                    <section aria-label="GameInspiration" class="comment-content">
+                        <hgroup class="bible-content tc">
+                            <h5>Favorite Play</h5></hgroup>
+                                <p>Classic Favorite Games with Emulators to play them if desired. Like alot of things on NineNeins is a front end storage for my Computers. Makeing it a super interactive Blog/Site/App or whatever word you want to use for it.</p></section>
+                        </div></div></div>
+<!--Quote -->
+                    <div class="panel_row">
+                        <div class="blog-content col-MainX col-lg-MainL col-MainM col-sm-MainS">
+                        <p class="text-muted">"A game is creative - someone created it.<br><u>There is no better developer than God</u>"</p></div></div></section>
+<!--InfoWrap Close -->
+    </div>
