--- a/Frame/Layout/6_ReadMore/bookinfowrap.html
+++ b/Frame/Layout/6_ReadMore/bookinfowrap.html
@@ -1,17 +1,17 @@
-<!--Page Contain -->
+<!--InfoWrap Open -->
     <div class="panel-body">
-    <section class="content Info-Sec" aria-label="bookwrapp">
-        <div class="panel-footy panel-default tc">
+        <section class="content" aria-label="bookwrapp">
+            <div class="panel-footy panel-default tc">
 <!--Header -->
-            <hgroup class="section-header">
-                <h2 class="icon9add icon9-info-sign text-primary" style="font-size:40px"></h2>
-                <h4>The Books</h4></hgroup>
-            <p class="text-muted">This list is cited as a grand overview of varying topics.<br><a href="https://www.NineNeins.com/B-Topic/NatSoc/saints" target="_blank">The Saint's Manifestos are also available by clicking here.</a></p>
+                <hgroup>
+                    <h2 class="icon9add icon9-info-sign text-primary" style="font-size:40px"></h2>
+                    <h4>The Books</h4></hgroup>
+                <p class="text-muted">This list is cited as a grand overview of varying topics.<br><a href="https://www.NineNeins.com/B-Topic/NatSoc/saints" target="_blank">The Saint's Manifestos are also available by clicking here.</a></p>
 <!--Button -->
-            <section aria-label="BookWrap">
-                <div class="btn-1 center-block">
-                    <h3 class="panel-title tc">
-                    <a style="center" class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#bookRM"><span>Read - More</span></a></h3></div></section></div>
+                <section class="panel-body" aria-label="BookWrap">
+                    <div class="btn-1 center-block">
+                        <h3 class="panel-title tc">
+                        <a style="center" class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#bookRM"><span>Read - More</span></a></h3></div></section></div></section>
 <!--Library ReadMore -->
         <div id="bookRM" class="panel-collapse collapse">
         <!--Contain -->
@@ -57,8 +57,10 @@
                         <h5>Lectures, Speeches, and Sermons</h5></hgroup>
                             <p>This section would not be complete without them.</p></section>
                     </div></div>
-                </div></section></div> 
-
+                </div>
+<!--Quote -->
                 <div class="panel_row">
                     <div class="blog-content col-MainX col-lg-MainL col-MainM col-sm-MainS">
-                    <p class="section-heading text-muted">"The books that the world calls immoral, are books<br><u>that show the world its own shame.</u>"</p></div></div>
+                    <p class="text-muted">"The books that the world calls immoral, are books<br><u>that show the world its own shame.</u>"</p></div></div>
+<!--InfoWrap Close -->
+    </div> 
