--- a/Frame/Layout/6_ReadMore/faqinfowrap.html
+++ b/Frame/Layout/6_ReadMore/faqinfowrap.html
@@ -1,2 +1,11 @@
-            <div class="panel-footy blog-content col-MainX col-lg-MainL col-MainM col-sm-MainS">
-                <p class="section-heading text-muted">"<u>Do you want to hear what I said again?</u>"</p></div>
+<!--InfoWrap Open -->
+    <div class="panel-body">
+        <section class="content" aria-label="homewrapp">
+            <div class="panel-footy panel-default tc">
+<!--Quote -->
+                <div class="panel_row">
+                    <div class="blog-content col-MainX col-lg-MainL col-MainM col-sm-MainS">
+                        <p class="text-muted">"<u>Do you want to hear what I said again?</u>"</p></div></div>
+                    </div></section>
+<!--InfoWrap Close -->
+    </div>
