--- a/Frame/Layout/6_ReadMore/homeinfowrap.html
+++ b/Frame/Layout/6_ReadMore/homeinfowrap.html
@@ -1,24 +1,22 @@
-<!--Page Contain -->
+<!--InfoWrap Open -->
     <div class="panel-body">
-    <section class="content Info-Sec" aria-label="homewrapp">
-        <div class="panel-footy panel-default tc">
+        <section class="content" aria-label="homewrapp">
+            <div class="panel-footy panel-default tc">
 <!--Header --> 
-            <hgroup class="section-header">
-                <h2 class="icon9add icon9-info-sign text-primary" style="font-size:40px"></h2>
-                <h4>View Blog</h4></hgroup>
-            <p class="text-muted">Updates, guides, pre-release previews,<br> 
-                sponsors, hypotheses, opinion pieces, and articles<br> are all available for everything 9-Neins development.</p> 
+                <hgroup>
+                    <h2 class="icon9add icon9-info-sign text-primary" style="font-size:40px"></h2>
+                    <h4>View Blog</h4></hgroup>
+                <p class="text-muted">Updates, guides, pre-release previews,<br> 
+                    sponsors, hypotheses, opinion pieces, and articles<br> are all available for everything 9-Neins development.</p>
 <!--Button -->
-        <section aria-label="HomeWrap">
-
-            <div class="container-fluid tc"><br>
-                <section aria-label="GEBlog">
-                    <div class="panel">
-                        <div class="panel-body">
-                            <div class="btn-1 center-block">
-                                <a style="center" href="blog"><span>Check Blog</span></a></div>
-                        </div></div></section></div>
-        </section></div></section></div>
-
-            <div class="panel-footy blog-content col-MainX col-lg-MainL col-MainM col-sm-MainS">
-                <p class="section-heading text-muted">"For the vision is yet for an appointed time, <u>but at the end it shall speak, and not lie: though it tarry, wait for it; because it will surely come, it will not tarry.</u>"</p></div>
+                <section class="panel-body" aria-label="HomeWrap">
+                    <div class="btn-1 center-block">
+                        <h3 class="panel-title tc">
+                        <a style="center" href="blog"><span>Check Blog</span></a></h3></div></section>
+                    </div></section>
+<!--Quote -->
+                <div class="panel_row">
+                    <div class="blog-content col-MainX col-lg-MainL col-MainM col-sm-MainS">
+                    <p class="text-muted">"For the vision is yet for an appointed time,<br> <u>but at the end it shall speak, and not lie: though it tarry, wait for it; because it will surely come, it will not tarry.</u>"</p></div></div>
+<!--InfoWrap Close -->
+    </div>
