--- a/Frame/Layout/6_ReadMore/movieinfowrap.html
+++ b/Frame/Layout/6_ReadMore/movieinfowrap.html
@@ -1,16 +1,18 @@
-<div class="panel-body">
-<section class="content Info-Sec" aria-label="movwrapp">
-    <div class="panel-footy panel-default tc">
-        <hgroup class="section-header">
-            <h2 class="icon9add icon9-info-sign text-primary" style="font-size:40px"></h2>
-            <h4>Inspirations</h4></hgroup>
-        <p class="text-muted">For those that like useless reasoning - and a pattern emerges.</p>
-
-        <section aria-label="MovieWrap">
-            <div class="btn-1 center-block">
-                <h3 class="panel-title tc">
-                <a style="center" class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#moviezRM"><span>Read - More</span></a></h3></div></section></div>
-
+<!--InfoWrap Open -->
+    <div class="panel-body">
+        <section class="content" aria-label="movwrapp">
+            <div class="panel-footy panel-default tc">
+<!--Header --> 
+                <hgroup>
+                    <h2 class="icon9add icon9-info-sign text-primary" style="font-size:40px"></h2>
+                    <h4>Inspirations</h4></hgroup>
+                <p class="text-muted">For those that like useless reasoning - and a pattern emerges.</p>
+<!--Button -->
+                <section class="panel-body" aria-label="MovieWrap">
+                    <div class="btn-1 center-block">
+                        <h3 class="panel-title tc">
+                        <a style="center" class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#moviezRM"><span>Read - More</span></a></h3></div></section></div>
+<!--Movie ReadMore -->
                     <div id="moviezRM" class="comment-content panel-collapse collapse">
                         <div class="content panel-body comment-content">
                             <p class="lead text-muted">One of the questions I get the most - which is most likely out of mere curiosity I believe:</p> <p class="lead text-muted tc"> What are my favorite movies?</p> 
@@ -52,8 +54,10 @@
                             <br><br> 
                             Maybe you haven't seen them and this list presents a chance to watch them, maybe you have seen them and hopefully will have some nostalgic effect. Either way I hope you get something out of them as I decided instead of a top 10 which is nearly impossible due to category - I would create 3 types with top (animated-5, movie-10, and show-8).
                         </p></section></div></div>
-                </section></div>
-
+                </section>
+<!--Quote -->
                 <div class="panel_row">
                     <div class="blog-content col-MainX col-lg-MainL col-MainM col-sm-MainS">
-                    <p class="section-heading text-muted">"A film is one of the greatest weapons ever crafted.<br><u>Second only to finance.</u>"</p></div></div>
+                    <p class="text-muted">"A film is one of the greatest weapons ever crafted.<br><u>Second only to finance.</u>"</p></div></div>
+<!--InfoWrap Close -->
+    </div>
