--- a/Frame/Layout/2_Intro/movieintro.html
+++ b/Frame/Layout/2_Intro/movieintro.html
@@ -1,5 +1,5 @@
 <div class="panel-body">
     <section class="intro">
         <h2 id="movieI" class="section-heading">Inspiration</h2>
-        <span class="icon9add icon9-film" style="font-size: 60px"></span>
+        <span class="icon9add icon9-film" style="font-size: 60px">&nbsp;</span>
         <p class="text-light">Influencing Media</p></section></div>
