--- a/Frame/Layout/2_Intro/saintintro.html
+++ b/Frame/Layout/2_Intro/saintintro.html
@@ -1,5 +1,5 @@
 <div class="panel-body">
     <section class="intro">
         <h2 id="sainti" class="section-heading">o/ Saints</h2>
-        <span class="icon9add icon9-lightning" style="font-size: 60px"></span>
+        <span class="icon9add icon9-lightning" style="font-size: 60px">&nbsp;</span>
         <p class="text-light">The Saints' most banned texts.</p></section></div>
