--- a/Frame/Layout/6_ReadMore/BTech/swinfowrap.html
+++ b/Frame/Layout/6_ReadMore/BTech/swinfowrap.html
@@ -1,13 +1,16 @@
-<!--Page Contain -->
-                <div class="panel-body">
-                <section class="content Info-Sec">
-                    <div class="panel-footy panel-default tc">
-                        <hgroup class="section-header">
-                            <h2 class="icon9add icon9-info-sign text-primary" style="font-size: 40px"></h2>
-                            <h4>Resources</h4></hgroup> 
-                        <p class="text-muted">Some of the best resources<br> to guide back in time.</p>  
-                    </div></section></div>
-
-                <div class="panel_row">
-                    <div class="blog-content col-MainX col-lg-MainL col-MainM col-sm-MainS">
-                    <p class="section-heading text-muted">"Content Creation is more than just producing something<br><u>It is having and knowing the tools to do anything.</u></p></div></div>
+<!--InfoWrap Open -->
+    <div class="panel-body">
+        <section class="content" aria-label="swwrapp">
+            <div class="panel-footy panel-default tc">
+<!--Header -->
+                <hgroup>
+                    <h2 class="icon9add icon9-info-sign text-primary" style="font-size: 40px"></h2>
+                    <h4>Resources</h4></hgroup> 
+                <p class="text-muted">Some of the best resources<br> to guide back in time.</p>  
+            </div></section>
+<!--Quote -->
+        <div class="panel_row">
+            <div class="blog-content col-MainX col-lg-MainL col-MainM col-sm-MainS">
+            <p class="text-muted">"Content Creation is more than just producing something<br><u>It is having and knowing the tools to do anything.</u></p></div>
+<!--InfoWrap Close -->
+    </div>
