--- a/Frame/Layout/6_ReadMore/musicinfowrap.html
+++ b/Frame/Layout/6_ReadMore/musicinfowrap.html
@@ -1,17 +1,17 @@
-<!--Page Contain -->
+<!--InfoWrap Open -->
     <div class="panel-body">
-    <section class="content Info-Sec" aria-label="musewrapp">
-        <div class="panel-footy panel-default tc">
+        <section class="content" aria-label="musewrapp">
+            <div class="panel-footy panel-default tc">
 <!--Header -->     
-            <hgroup class="section-header">
-                <h2 class="icon9add icon9-info-sign text-primary" style="font-size:40px"></h2>
-                <h4>Music</h4></hgroup>
-            <p class="text-muted">Find the entire library at<br><a href="https://argentbeacon.com" target="_blank">Argent Beacon</a></p> 
+                <hgroup>
+                    <h2 class="icon9add icon9-info-sign text-primary" style="font-size:40px"></h2>
+                    <h4>Music</h4></hgroup>
+                <p class="text-muted">Find the entire library at<br><a href="https://argentbeacon.com" target="_blank">Argent Beacon</a></p> 
 <!--Button -->
-            <section aria-label="MuseWrapp">
-                <div class="btn-1 center-block">
-                    <h3 class="panel-title tc">
-                    <a style="center" class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#musRM"><span>Read - More</span></a></h3></div></section></div>
+                <section class="panel-body" aria-label="MuseWrapp">
+                    <div class="btn-1 center-block">
+                        <h3 class="panel-title tc">
+                        <a style="center" class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#musRM"><span>Read - More</span></a></h3></div></section></div>
 <!--Music ReadMore -->
         <div id="musRM" class="panel-collapse collapse">
             <!--Contain -->
@@ -23,8 +23,10 @@
                     <h5>Music</h5></hgroup>
                         <p class="tc">I am an Album guy per say - as this section entails.</p><p>For all the amazing works visit <a href="https://argentbeacon.com" target="_blank">Argent Beacon</a><br>I am more concentrated in creating the aesthetic of albums that involves cover arts, lyrics, etc.</p></section>
                     </div></div>
-                </div></section></div> 
-
+                </div></section> 
+<!--Quote -->
                 <div class="panel_row">
                     <div class="blog-content col-MainX col-lg-MainL col-MainM col-sm-MainS">
-                    <p class="section-heading text-muted">"A song will outlive <u>all sermons in the memory.</u>"</p></div></div>
+                    <p class="text-muted">"A song will outlive <u>all sermons in the memory.</u>"</p></div></div>
+<!--InfoWrap Close -->
+    </div> 
