--- a/Frame/Layout/6_ReadMore/saintinfowrap.html
+++ b/Frame/Layout/6_ReadMore/saintinfowrap.html
@@ -1,9 +1,9 @@
-<!--Page Contain -->
+<!--InfoWrap Open -->
     <div class="panel-body">
-    <section class="content Info-Sec" aria-label="saintwrapp">
-        <div class="panel-footy panel-default tc">
+        <section class="content" aria-label="saintwrapp">
+            <div class="panel-footy panel-default tc">
 <!--Header -->
-            <hgroup class="section-header">
+            <hgroup>
                 <h2 class="icon9add icon9-info-sign text-primary" style="font-size:40px"></h2>
                 <h4>o/ Saints</h4></hgroup>
             <p class="text-muted">We dont need anymore martyrs.<br>We dont need anymore lost Brothers or Sisters.</p><p class="text-muted"> What we do need is to make sure our boys did not sacrifice and have given it all up in vain.<br> 
@@ -33,8 +33,10 @@
                         <div class="btn-1 center-block">
                             <a style="center" onclick="window.open('../../B-Topic/Support/RobertBowers','_blank'); return false;"><span>Robert Bowers</span></a></div> 
                     </div></div></section>
-                </div></section></div>
-
+                </div></section>
+<!--Quote -->
                 <div class="panel_row">
                     <div class="blog-content col-MainX col-lg-MainL col-MainM col-sm-MainS">
-                    <p class="section-heading text-muted">"The big problem is that people<wbr> don't believe a revolution is possible,<br> and it is not possible<wbr> <u>precisely because they do not believe it is possible.</u>"</p></div>
+                    <p class="text-muted">"The big problem is that people<wbr> don't believe a revolution is possible,<br> and it is not possible<wbr> <u>precisely because they do not believe it is possible.</u>"</p></div>
+<!--InfoWrap Close -->
+    </div>
