--- a/Frame/Layout/6_ReadMore/videoinfowrap.html
+++ b/Frame/Layout/6_ReadMore/videoinfowrap.html
@@ -1,48 +1,49 @@
-<!--Page Contain -->
+<!--InfoWrap Open -->
     <div class="panel-body">
-    <section class="content Info-Sec" aria-label="vidwrapp">
-        <div class="panel-footy panel-default tc">
+        <section class="content" aria-label="vidwrapp">
+            <div class="panel-footy panel-default tc">
 <!--Header -->
-            <hgroup class="section-header">
-                <h2 class="icon9add icon9-info-sign text-primary" style="font-size:40px"></h2>
-                <h4>Videos</h4></hgroup>
-            <p class="text-muted">There are plenty of tube channels full of great uploads.<br> I have no desire to create yet another one - only to host the best.</p><p>For those that like reasoning this is for you.</p>
+                <hgroup>
+                    <h2 class="icon9add icon9-info-sign text-primary" style="font-size:40px"></h2>
+                    <h4>Videos</h4></hgroup>
+                <p class="text-muted">There are plenty of tube channels full of great uploads.<br> I have no desire to create yet another one - only to host the best.</p><p>For those that like reasoning this is for you.</p>
 <!--Button -->
-            <section aria-label="VidWrap">
-                <div class="btn-1 center-block">
-                    <h3 class="panel-title tc">
-                    <a style="center" class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#vidRM"><span>Read - More</span></a></h3></div></section></div>
+                <section class="panel-body" aria-label="VidWrap">
+                    <div class="btn-1 center-block">
+                        <h3 class="panel-title tc">
+                        <a style="center" class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#vidRM"><span>Read - More</span></a></h3></div></section></div></section>
 <!--Vid ReadMore -->
-        <div id="vidRM" class="panel-collapse collapse">
-            <!--Contain -->
-            <div class="content panel-body">
-                <div class="content-inner">
+            <div id="vidRM" class="panel-collapse collapse">
+                <!--Contain -->
+                <div class="content panel-body">
+                    <div class="content-inner">
 <!--Main -->
-                <section aria-label="VisualCulture" class="comment-content">
-                    <hgroup class="bible-content tc">
-                        <h5>Videos</h5></hgroup>
-                            <p>The goal here is focused on merely the most inspirational, powerful, and best of all presentation productions.<br><br>
-                            Nearly all of the content in pro-White circles is uncompressed, which makes the files ridiculously large creating buffering and downloading an issue. Need I mention that even dedicated search features of pro-White content are an unorganized hit and miss.
-                            <br><br>
-                            The goal with NineNeins videos is to remedy these factors to make a more mainline, superfast stream - for a more enjoyable and shareable experience.</p>
-                    <hgroup class="bible-content">
-                        <h5>Podcast</h5></hgroup>
-                            <p>Although videos are typically included within podcasts, it seemed only appropriate to include them here.
-                            <br><br>
-                            I personally am not a fan of talking heads, podcasters, or other worthless paywall intellectuals in general, as most of you are aware. Yet, this is not to imply that there aren't any excellent voices out there producing incredible works with educational, enjoyable, and all-around delightful concerts. Sadly, they are the absolute minority in these tube spheres.
-                            <br><br>
-                            For example there are only 2 presented here - to be fair there are 4 others under consideration.
-                            <br><br> 
-                            I just have not decided if they are NineNeins mission focused or incorporateable into the development as of now. I feel it safe to say a couple will be added in coming days.</p>
-                    <hgroup aria-label="channeltitle" class="bible-content">
-                        <h5>Channels</h5></hgroup>
-                            <p>This has been a challenge with all the different platforms from GoyimTv(all around), Shing(streams), Piped(uploads), Bitchute(channels), Odyessy(channels/streams), etc...
-                            <br><br>
-                            I do not want to invest time manageing different video accounts or constantly bouncing between for whatever reason. That being said there are Channels I do think deserve recognition and will be featured here no matter platform.</p>
-                        </section>
-                    </div></div></div>
-                </section></div>
-
+                        <section aria-label="VisualCulture" class="comment-content">
+                            <hgroup class="bible-content tc">
+                                <h5>Videos</h5></hgroup>
+                                    <p>The goal here is focused on merely the most inspirational, powerful, and best of all presentation productions.<br><br>
+                                    Nearly all of the content in pro-White circles is uncompressed, which makes the files ridiculously large creating buffering and downloading an issue. Need I mention that even dedicated search features of pro-White content are an unorganized hit and miss.
+                                    <br><br>
+                                    The goal with NineNeins videos is to remedy these factors to make a more mainline, superfast stream - for a more enjoyable and shareable experience.</p>
+                            <hgroup class="bible-content">
+                                <h5>Podcast</h5></hgroup>
+                                    <p>Although videos are typically included within podcasts, it seemed only appropriate to include them here.
+                                    <br><br>
+                                    I personally am not a fan of talking heads, podcasters, or other worthless paywall intellectuals in general, as most of you are aware. Yet, this is not to imply that there aren't any excellent voices out there producing incredible works with educational, enjoyable, and all-around delightful concerts. Sadly, they are the absolute minority in these tube spheres.
+                                    <br><br>
+                                    For example there are only 2 presented here - to be fair there are 4 others under consideration.
+                                    <br><br> 
+                                    I just have not decided if they are NineNeins mission focused or incorporateable into the development as of now. I feel it safe to say a couple will be added in coming days.</p>
+                            <hgroup aria-label="channeltitle" class="bible-content">
+                                <h5>Channels</h5></hgroup>
+                                    <p>This has been a challenge with all the different platforms from GoyimTv(all around), Shing(streams), Piped(uploads), Bitchute(channels), Odyessy(channels/streams), etc...
+                                    <br><br>
+                                    I do not want to invest time manageing different video accounts or constantly bouncing between for whatever reason. That being said there are Channels I do think deserve recognition and will be featured here no matter platform.</p>
+                                </section>
+                            </div></div></div>
+<!--Quote -->
                 <div class="panel_row">
                     <div class="blog-content col-MainX col-lg-MainL col-MainM col-sm-MainS">
-                    <p class="section-heading text-muted">"<u>The truth is always stronger</u> than the lie."</p></div></div>
+                    <p class="text-muted">"<u>The truth is always stronger</u> than the lie."</p></div></div>
+<!--InfoWrap Close -->
+    </div>
